@@ -97,7 +97,10 @@ use warnings;
 
 {{ $perl_prereq ? qq[use $perl_prereq;] : ''; }}
 
-use ExtUtils::MakeMaker{{ defined $eumm_version && 0+$eumm_version ? ' ' . $eumm_version : '' }};
+use ExtUtils::MakeMaker{{
+    0+$eumm_version
+        ? ' ' . (0+$eumm_version eq $eumm_version ? $eumm_version : "'" . $eumm_version . "'")
+        : '' }};
 {{ $share_dir_code{preamble} || '' }}
 my {{ $WriteMakefileArgs }}
 
